--- a/src/components/blogListComponent/blogListComponent.scss
+++ b/src/components/blogListComponent/blogListComponent.scss
@@ -1,5 +1,6 @@
 .blogList__content{
-    margin-top: 2%;
+    margin-top: 3%;
+    padding: 3% 0;
     .blogList__title{
         width: 100%;
     }
