--- a/src/components/teamComponent/teamComponent.scss
+++ b/src/components/teamComponent/teamComponent.scss
@@ -65,9 +65,9 @@
     .teamComponent__popup{
         height: 100vh;
         width: 100vw;
-        position: absolute;
+        position: fixed;
         left: 0;
-        top: -23.8%;
+        top: 0%;
         right:0;
         z-index: 9999;
         background-color: #1a1a1a80;
