--- a/src/components/blogList/blogList.scss
+++ b/src/components/blogList/blogList.scss
@@ -28,36 +28,40 @@
         display: flex;
         flex-wrap: wrap;
         padding: 4% 0;
-        .blog__card{
-            border-radius: 15px;
-            box-shadow: 4px 3px 15px 0px #00000040;
-            background-color: #fff;
-            width: 270px;
-            min-height: 284px;
+
+        .blog__link{
             margin: 0 2.5% 3% 0%;
-            .card__media{
-                img{
-                    -webkit-user-drag: none;
-                    width: 100%;
-                    height: 130px;
-                    border-top-left-radius: 15px;
-                    border-top-right-radius: 15px;
-                    object-fit: cover;
+            text-decoration: none;
+            .blog__card{
+                border-radius: 15px;
+                box-shadow: 4px 3px 15px 0px #00000040;
+                background-color: #fff;
+                width: 270px;
+                min-height: 284px;
+                .card__media{
+                    img{
+                        -webkit-user-drag: none;
+                        width: 100%;
+                        height: 130px;
+                        border-top-left-radius: 15px;
+                        border-top-right-radius: 15px;
+                        object-fit: cover;
+                    }
                 }
-            }
-            .card__content{
-                margin-top: 3%;
-                padding: 0 3%;
-                .card__title{
-                    font-family: 'Montserrat ExtraBold';
-                    font-size: 18px;
-                    letter-spacing: 0em;       
-                    margin-bottom: 4%;         
-                }
-                .card__description{
-                    font-family: 'Montserrat Medium';
-                    font-size: 16px;
-                    line-height: 16px;        
+                .card__content{
+                    margin-top: 3%;
+                    padding: 0 3%;
+                    .card__title{
+                        font-family: 'Montserrat ExtraBold';
+                        font-size: 18px;
+                        letter-spacing: 0em;       
+                        margin-bottom: 4%;         
+                    }
+                    .card__description{
+                        font-family: 'Montserrat Medium';
+                        font-size: 16px;
+                        line-height: 16px;        
+                    }
                 }
             }
         }
