--- a/src/components/heroPetsList/heroPetsList.scss
+++ b/src/components/heroPetsList/heroPetsList.scss
@@ -1,4 +1,4 @@
-#HeroBlog{
+#heroPets{
     background: linear-gradient(112.86deg, #FFBF45 9.58%, #FF9C41 90.39%);
 }
 
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    height: 50vh;
+    height: 60vh;
     width: 50%;
     padding-bottom: 4%;
         .heroBlog__title{
@@ -19,6 +19,22 @@
             font-family: 'Montserrat Medium';
             font-size: 16px;
             line-height: 16px;    
-            width: 67%;    
+            width: 70%;    
+            margin-bottom: .3%;
+        }
+        .heroBlog__button{
+            margin-top: 5%;
+            outline:none;
+            cursor: pointer;
+            border:0;
+            border-radius: 5px;
+            background-color: #FF5C5C;
+            box-shadow: 0px 9px 50px 0px #ff615c4d;
+            height:65px;
+            width: 270px;
+            font-family: 'Montserrat Bold';
+            font-size: 20px;
+            line-height: 33px;
+            color:#fff;
         }
 }
