--- a/src/components/similarPetsComponent/similarPetsComponent.scss
+++ b/src/components/similarPetsComponent/similarPetsComponent.scss
@@ -1,54 +1,9 @@
-.petsList__content{
-    padding: 4% 0;
-    .petsList__menu{
-        display: flex;
-        justify-content: space-between;
-        .petsList__selects{
-            width: 80%;
-            .petList__select{
-                outline: none;
-                cursor: pointer;
-                height: 55px;
-                width: 170px;
-                font-family: 'Montserrat Medium';
-                font-size: 18px;
-                line-height: 22px;
-                color: #777777;
-                border-radius: 10px;
-                border: 1px solid #A9A9A9;
-                margin-left: 2.5%;
-                padding: 0 1.5%;
-                appearance: none;
-                background-image: url('../../images/selectArrow.svg');
-                background-repeat: no-repeat;
-                background-position-x: 91%;
-                background-position-y: 50%;
-                &:first-of-type{
-                    margin-left: 0;
-                }
-            }
-        }
-        .petsList__searchBtn{
-            background-color: #FFBF45;
-            outline: none;
-            border: 0;
-            cursor: pointer;
-            border-radius: 10px;
-            height: 55px;
-            width: 170px;
-            font-family: 'Montserrat Bold';
-            font-size: 18px;
-            line-height: 22px;
-            display: flex;
-            align-items: center;
-            justify-content: space-evenly;
-            padding: 0 2.5%;
-        }
-    }
-    .petsList__list{
+.similarPets__content{
+    margin: 3% 0;
+    .similarPets__list{
         display: flex;
         flex-wrap: wrap;
-        padding: 7% 0;
+        padding: 3% 0;
         .petsList__cardLink{
             margin: 0 1.25% 3% 1.25%;
             text-decoration: none;
