--- a/src/components/helpListComponent/helpListComponent.scss
+++ b/src/components/helpListComponent/helpListComponent.scss
@@ -183,7 +183,7 @@
                             width: 250px;
                             height: 65px;
                             background-color: #FFBF45;
-                            font-family: 'Montserrat Black';
+                            font-family: 'Montserrat Bold';
                             font-size: 18px;
                             line-height: 22px;
                             color: #fff;
