--- a/src/components/helpListComponent/helpListComponent.scss
+++ b/src/components/helpListComponent/helpListComponent.scss
@@ -68,7 +68,7 @@
             scrollbar-width: 3px;
             .mainPopup{
                 background-color: #fff;
-                padding: 4% 2%;
+                padding: 2% 2%;
                 height: 750px;
                 width: 90%;
                 max-width: 1300px;
@@ -91,6 +91,7 @@
                   }
                   .form__popup{
                       width: 52%;
+                      max-width: 570px;
                       .formData{
                         display: flex;
                         flex-wrap: wrap;
