--- a/src/components/homeAboutShelderComponent/aboutShelder.scss
+++ b/src/components/homeAboutShelderComponent/aboutShelder.scss
@@ -1,5 +1,4 @@
 .aboutShelder__Content{
-    // margin-top: 10%;
     padding: 10% 0;
     display: flex;
     justify-content: space-between;
@@ -29,12 +28,54 @@
             outline: none;
             border:0;
             background-color: transparent;
-            // height: 70px;
-            // width: 180px;
             font-family: 'Montserrat Regular';
             font-size: 18px;
             line-height: 23px;
             color:#FF5C5C;
         }
     }
+}
+
+@media screen and (max-width: 1199px) {
+    .aboutShelder__Content{
+        flex-direction: column;
+    }
+
+    .aboutShelder__Content .aboutShelder__image{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .aboutShelder__Content .aboutShelder__image img{
+        width: 60%;
+    }
+
+    .aboutShelder__Content .aboutShelder__content{
+        margin-top: 3%;
+        max-width: 75%;
+    }
+    
+}
+
+@media screen and (max-width: 575px) {
+    .aboutShelder__Content{
+        flex-direction: column;
+    }
+
+    .aboutShelder__Content .aboutShelder__image{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .aboutShelder__Content .aboutShelder__image img{
+        width: 90%;
+    }
+
+    .aboutShelder__Content .aboutShelder__content{
+        margin-top: 3%;
+        max-width: 90%;
+    }
+    
 }
