--- a/src/components/triggers/triggers.scss
+++ b/src/components/triggers/triggers.scss
@@ -1,8 +1,4 @@
 .triggersContent{
-
-}
-
-.triggersContent{
     padding: 3% 0;
     display: flex;
     flex-direction: column;
@@ -71,4 +67,52 @@
         }
     }
 
+}
+
+@media screen and (max-width: 1199px) {
+    .triggersContent{
+        margin-left: 2%;
+    }
+    .triggersContent .triggersList .triggersList__item{
+        width: 35%;
+    }
+    
+}
+
+
+@media screen and (max-width: 991px) {
+    .triggersContent{
+        height: 350px;
+    }
+    .triggersContent .triggersList{
+        flex-direction: column;
+    }
+    .triggersContent .triggersList .triggersList__item{
+        width: 80%;
+        margin-top: 2%;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+}
+
+@media screen and (max-width: 575px) {
+    .triggersContent .triggersList .triggersList__item{
+        width: 90%;
+    }
+    .triggersContent .triggersList .triggersList__item .triggersCard__img{
+        width: 60px;
+        height: 60px;
+    }
+    .triggersContent .triggersList .triggersList__item .triggersCard__img img{
+        width: 40px;
+        height: 40px;
+    }
+    .triggersContent .triggersList .triggersList__item .triggersCard__content h3{
+        font-size: 20px;
+        line-height: 23px;
+    }
+    .triggersContent .triggersList .triggersList__item .triggersCard__content p{
+        font-size: 16px;
+        line-height: 18px;
+    }
 }
